--- a/Stocks/Base.lproj/Main.storyboard
+++ b/Stocks/Base.lproj/Main.storyboard
@@ -69,10 +69,18 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5co-bR-y8P">
+                                <rect key="frame" x="143" y="328" width="128" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="iQ8-Kq-IKq"/>
+                                    <constraint firstAttribute="height" constant="128" id="r83-7S-CcR"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="i6i-M8-5eF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="17u-yW-ASW"/>
+                            <constraint firstItem="5co-bR-y8P" firstAttribute="top" secondItem="KVn-mT-yMW" secondAttribute="bottom" constant="40" id="1HZ-v0-sKe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KMh-Bq-qqc" secondAttribute="trailing" constant="40" id="1US-Yv-J46"/>
                             <constraint firstItem="rlB-g3-aZR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4Rl-1L-4us"/>
                             <constraint firstItem="8Fl-ff-QWt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="4wr-1X-7rE"/>
@@ -90,6 +98,7 @@
                             <constraint firstItem="KMh-Bq-qqc" firstAttribute="top" secondItem="trI-yR-S47" secondAttribute="bottom" constant="40" id="dck-Um-67V"/>
                             <constraint firstItem="aRG-nM-es5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="rBx-oc-6O2"/>
                             <constraint firstItem="QW2-cF-BCA" firstAttribute="top" secondItem="8Fl-ff-QWt" secondAttribute="bottom" constant="40" id="rSG-Cy-pki"/>
+                            <constraint firstItem="5co-bR-y8P" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tSg-Yd-i3p"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Fl-ff-QWt" secondAttribute="trailing" constant="40" id="tdc-hH-uhZ"/>
                             <constraint firstItem="LKX-lM-Puh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="vFm-eq-16J"/>
                             <constraint firstItem="rlB-g3-aZR" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="x2X-Zz-DRs"/>
@@ -99,6 +108,7 @@
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="aRG-nM-es5" id="t8a-40-aaH"/>
+                        <outlet property="companyIconImageView" destination="5co-bR-y8P" id="RyZ-Yr-2lh"/>
                         <outlet property="companyNameLabel" destination="8Fl-ff-QWt" id="CR7-jL-BiJ"/>
                         <outlet property="companyPickerView" destination="rlB-g3-aZR" id="qUm-le-Brx"/>
                         <outlet property="companySymbolLabel" destination="QW2-cF-BCA" id="8QD-qY-BmU"/>
